# metatag

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
help/: metatag.maxhelp
source/: Info.plist  metatag.cpp  metatag.sln  metatag.vcxproj
source/metatag.xcodeproj/: project.pbxproj
source/projects/metatag/: CMakeLists.txt  metatag.cpp
source/taglib/Win/Win32/Debug/: tag.lib  zlibstaticd.lib
source/taglib/Win/Win32/Release/: tag.lib  zlibstatic.lib
source/taglib/Win/x64/Debug/: tag.lib  zlibstaticd.lib
source/taglib/Win/x64/Release/: tag.lib  zlibstatic.lib
